# AutoStrategist-AI

./: .env.example  .gitignore  04_final_clean.ipynb  README.md  databricks.example.yml  databricks.yml  deploy.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/prompts/: master-prompt.md.prompt.md
app/: app.py  app.yaml  requirements.txt
autostrategist_ai/: __init__.py
autostrategist_ai/agents/: __init__.py  config.py  data_structures.py  prompts.py  tools.py  workflow.ipynb  workflow.py  workflow_deploy.py
autostrategist_ai/ingestion/: car_models_clean.py  config.py  enrich_data.py  ingest_data.py  load_data.py  prepare_data.py  prompts.py  reparation_data.py
development/: extract_details_dev.ipynb  test_artifact.py
resources/: app.yml  deploy.yml  ingestion-local.yml  ingestion.yml
src/agents/: data_structures.py  prompts.py  tools.py  workflow.py
src/app/: streamlit_app.py
src/ingestion/: 00_load_data.ipynb  00_load_data.py  01_ingest_data.ipynb  01_ingest_data.py  020_prepare_data.ipynb  020_prepare_data.py  021_car_models_clean.ipynb  021_car_models_clean.py  02_prepare_data.ipynb  03_enrich_data.ipynb  03_enrich_data.py  03_extract_details_dev.ipynb  04_data_analysis.ipynb  car_models_clean.py  enrich_data.py  ingest_data.ipynb  ingest_data.py  load_data.ipynb  load_kaggle_data.py  prepare.ipynb  prepare_data.py  prepare_dev.ipynb  prompts.py  test_upload.py
tests/: __init__.py  test_car_models_clean.py  test_config.py  test_data_structures.py  test_ingestion_config.py  test_ingestion_prompts.py  test_prompts.py  test_tools.py  test_workflow.py
