[tool.poetry]
name = "autostrategist-ai"
version = "0.1.0"
description = "AI-powered platform for optimizing second-hand car sales on Databricks"
authors = ["Massimiliano Botticelli <>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.12"
mlflow = "^3.6.0"
kaggle = "^1.8.0"
databricks-langchain = "^0.11.0"
databricks-connect = "^17.3.1"

# mlflow = ">=2.9.0"
# langgraph = ">=0.0.40"
# langchain = ">=0.1.0"
# langchain-community = ">=0.0.10"
# databricks-langchain = "^0.9.0"
# kaggle = ">=1.5.16"
# streamlit = ">=1.29.0"
# pyyaml = ">=6.0.1"
# python-dotenv = ">=1.0.0"
# databricks-connect = ">=15.0.0,<16.0.0"
# speedtest-cli = "^2.1.3"

# [tool.poetry.group.dev.dependencies]
# black = ">=23.12.0"
# pylint = ">=3.0.0"
# pytest = ">=7.4.0"
# pytest-cov = ">=4.1.0"
# ipykernel = ">=6.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

