[tool.poetry]
name = "autostrategist-ai"
version = "0.1.0"
description = "AI-powered platform for optimizing second-hand car sales on Databricks"
authors = ["Massimiliano Botticelli <@>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
mlflow = "^3.6.0"
kaggle = "^1.8.0"
databricks-langchain = "^0.11.0"
streamlit = "^1.51.0"
databricks-agents = "^1.8.2"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.11.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

